[package]
name = "ssl_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dev-dependencies]
tokio = { version = "1.37.0", features = ["test-util", "macros"] }

[dependencies]
base64 = "0.22.0"
bincode = "1.3.3"
blake3 = "1.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
derive = "1.0.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2", "serde"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.0", features = ["derive"] }
